--- a/.github/workflows/autoapi.yml
+++ b/.github/workflows/autoapi.yml
@@ -10,7 +10,7 @@ on:
   #  branches: 
   #    - master
   schedule:
-    - cron: '12 */6 * * 1-5'
+    - cron: '30 9/12 * * 1-5'
   watch:
     types: [started]
    
